# visionqc

./: .gitignore  README.md  pyproject.toml
docs/: AI_PIPELINE.md  ARCHITECTURE.md  DEMO.md  TRAINING.md
scripts/: benchmark_inference.py  train.py
src/visionqc/: __init__.py  config.py  main.py  orchestrator.py
src/visionqc/alarms/: __init__.py  engine.py
src/visionqc/api/: __init__.py  line.py  routes.py  ws.py
src/visionqc/db/: __init__.py  database.py  migrations.py  repository.py  writer.py
src/visionqc/decision/: __init__.py  engine.py
src/visionqc/events/: __init__.py  bus.py  schemas.py
src/visionqc/evidence/: __init__.py  store.py
src/visionqc/inference_client/: __init__.py  client.py
src/visionqc/lifecycle/: __init__.py  states.py  tracker.py
src/visionqc/recipes/: __init__.py  service.py
src/visionqc/simulator/: __init__.py  line.py  source.py
src/visionqc/static/: dashboard.js  index.html
src/visionqc_inference/: __init__.py  heatmap.py  model.py  worker.py
tests/: conftest.py  test_alarms.py  test_api.py  test_db.py  test_decision.py  test_event_bus.py  test_evidence.py  test_heatmap.py  test_inference_worker.py  test_lifecycle.py  test_line_api.py  test_orchestrator.py  test_recipes.py  test_simulator.py  test_ws_protocol.py
