[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visionqc"
version = "0.1.0"
description = "VisionQC — industrial AI vision quality-control line controller (foundation)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "VisionQC" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "httpx>=0.27",
]
# GPU/EC2 training + real inference. Install on the box, NOT in the main test env.
# Local dev / CI: anomalib[cpu] (torch >=2.6,<=2.8). On the GPU box override with
# anomalib[cu126] (see docs/TRAINING.md) — NEVER [cu130] (broken torch 2.9).
ai = [
    "anomalib[cpu]==2.5.0",
    "torch>=2.6,<2.9",
    # pandas 3.x breaks anomalib 2.5.0's Split-enum filtering (Series == str-enum
    # returns all-False -> every dataset subset comes out empty). Hit live 2026-07.
    "pandas<3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/visionqc", "src/visionqc_inference"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "B008",   # function call in default arg (FastAPI Depends idiom)
    "UP042",  # str+Enum is intentional: JSON-serializable event/state types
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.uv]
package = true
